--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,9 @@ format: html
 ---
 
 ```{julia}
+#| echo: true  # <-- preview throws error if 'false'
 #| label: fig-index-plot
+#| output: true
 #| fig-cap: "A plot of the sine function"
 using Plots
 plot(sin, -2π, 2π)
