--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,14 @@
 ---
-title: "About"
+title: "Embed output"
 format: html
 ---
 
+## Embedding figure from `index.qmd`:
+
+Requires `keep-ipynb: true` in [index.qmd](index.qmd) frontmatter.
+
 {{< embed index.qmd#fig-index-plot >}}
+
+## Embedding figure from `index.ipynb`:
+
+{{< embed index.ipynb#fig-index-plot >}}
